# sa

./: README  _DUMP_.xml  _nc_simple.cpp  dump.sh  metricsconstants.php  metricslib.php  rmcomments.sed  simple.c  simple.cpp  simple.xml  simple_no_libs.xml
folder/: sampleinclude.cpp  sampleinclude.h
metrics/: cyclomaticComplexity.sh  linesOfCode.sh  numberUniqueOperators.sh  programLength.sh  totalNumberOperators.sh
metrics/halstead/: difficultyLevel.sh  effortToImplement.sh  numberDeliveredBugs.sh  numberUniqueOperands.sh  numberUniqueOperators.sh  programLength.sh  programLevel.sh  programVolume.sh  timeToImplement.sh  totalNumberOperands.sh  totalNumberOperators.sh  vocabularySize.sh
metrics/style/: blockBracketsSingle.sh  checkTabs.sh  programLineSize.sh  spaceBetweenBrackets.sh  spaceBracketsCode.sh  spaceCommentsText.sh  spaceParentesisBrackets.sh
metrics/style/verbose/: blockBracketsSingleVerbose.sh  checkTabsVerbose.sh  programLineSizeVerbose.sh  spaceBetweenBracketsVerbose.sh  spaceBracketsCodeVerbose.sh  spaceCommentsTextVerbose.sh  spaceParentesisBracketsVerbose.sh
xgrep-0.07/: ChangeLog  INSTALL  Makefile  Makefile.bak  Makefile.in  NEWS  README  config.status  configure  configure.ac  debug.c  debug.h  find.c  find.h  parsex.c  parsex.h  treex.c  treex.h  xgrep  xgrep.1  xgrep.c
